Exit fullscreen browse mode with Escape

Summary:
Previous versions of gwenview used {key Esc} to exit fullscreen mode.
By changing shortcut handling of {key Esc} this does not work anymore.
This patch adds an `eventFilter()` to leave fullscreen from browse
mode with {key Esc}.

BUG: 305659

Test Plan:
1. Open gwenview in browse mode
2. Switch to fullscreen mode (e.g. {key F11})
3. Press {key Esc}
-> Should switch back to windowed browse mode

Reviewers: ngraham, rkflx

Reviewed By: rkflx

Differential Revision: https://phabricator.kde.org/D10182